--- a/app/views/agents/agent_views/add_artist_agent/_show.html.erb
+++ b/app/views/agents/agent_views/add_artist_agent/_show.html.erb
@@ -10,32 +10,41 @@
 
   <div class="form-group">
     <label for="beatport">Beatport URL</label>
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="checkbox" id="beatport_x" name="beatport_x" checked>
-      </span>
-      <input type="text" id="beatport" name="beatport" class="form-control">
+    <div class="col-md-6">
+      <div class="input-group">
+        <span class="input-group-addon">
+          <input type="checkbox" id="beatport_x" name="beatport_x" checked>
+        </span>
+        <input type="text" id="beatport" name="beatport" class="form-control">
+      </div>
     </div>
+    <div class="col-md-6"></div>
   </div>
 
   <div class="form-group">
     <label for="soundcloud">SoundCloud Username</label>
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="checkbox" id="soundcloud_x" name="soundcloud_x" checked>
-      </span>
-      <input type="text" id="soundcloud" name="soundcloud" class="form-control">
+    <div class="col-md-6">
+      <div class="input-group">
+        <span class="input-group-addon">
+          <input type="checkbox" id="soundcloud_x" name="soundcloud_x" checked>
+        </span>
+        <input type="text" id="soundcloud" name="soundcloud" class="form-control">
+      </div>
     </div>
+    <div class="col-md-6"></div>
   </div>
 
   <div class="form-group">
     <label for="boilerroom">Boiler Room</label>
-    <div class="input-group">
-      <span class="input-group-addon">
-        <input type="checkbox" id="boilerroom_x" name="boilerroom_x" checked>
-      </span>
-      <input type="text" id="boilerroom" name="boilerroom" class="form-control">
+    <div class="col-md-6">
+      <div class="input-group">
+        <span class="input-group-addon">
+          <input type="checkbox" id="boilerroom_x" name="boilerroom_x" checked>
+        </span>
+        <input type="text" id="boilerroom" name="boilerroom" class="form-control">
+      </div>
     </div>
+    <div class="col-md-6"></div>
   </div>
 
   <div class='form-actions' style='clear: both'>
