--- a/app/views/agents/agent_views/add_artist_agent/_show.html.erb
+++ b/app/views/agents/agent_views/add_artist_agent/_show.html.erb
@@ -5,7 +5,10 @@
 <%= form_tag handle_details_post_agent_path(@agent), :id => "create-event-form" do %>
   <div class="form-group">
     <label for="artist_name">Artist Name</label>
-    <input type="text" id="artist_name" name="artist_name" class="form-control">
+    <div class="col-md-6">
+      <input type="text" id="artist_name" name="artist_name" class="form-control">
+    </div>
+    <div class="col-md-6"></div>
   </div>
 
   <div class="form-group">
