--- a/app/views/agents/agent_views/add_artist_agent/_show.html.erb
+++ b/app/views/agents/agent_views/add_artist_agent/_show.html.erb
@@ -3,17 +3,16 @@
 <h4 id='event-creation-status'></h4>
 
 <%= form_tag handle_details_post_agent_path(@agent), :id => "create-event-form" do %>
-  <div class="form-group">
-    <label for="artist_name">Artist Name</label>
-    <div class="col-md-6">
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="artist_name">Artist Name</label>
       <input type="text" id="artist_name" name="artist_name" class="form-control">
     </div>
-    <div class="col-md-6"></div>
   </div>
 
-  <div class="form-group">
-    <label for="beatport">Beatport URL</label>
-    <div class="col-md-6">
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="beatport">Beatport URL</label>
       <div class="input-group">
         <span class="input-group-addon">
           <input type="checkbox" id="beatport_x" name="beatport_x" checked>
@@ -21,12 +20,11 @@
         <input type="text" id="beatport" name="beatport" class="form-control">
       </div>
     </div>
-    <div class="col-md-6"></div>
   </div>
 
-  <div class="form-group">
-    <label for="soundcloud">SoundCloud Username</label>
-    <div class="col-md-6">
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="soundcloud">SoundCloud Username</label>
       <div class="input-group">
         <span class="input-group-addon">
           <input type="checkbox" id="soundcloud_x" name="soundcloud_x" checked>
@@ -34,12 +32,11 @@
         <input type="text" id="soundcloud" name="soundcloud" class="form-control">
       </div>
     </div>
-    <div class="col-md-6"></div>
   </div>
 
-  <div class="form-group">
-    <label for="boilerroom">Boiler Room</label>
-    <div class="col-md-6">
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="boilerroom">Boiler Room</label>
       <div class="input-group">
         <span class="input-group-addon">
           <input type="checkbox" id="boilerroom_x" name="boilerroom_x" checked>
@@ -47,7 +44,6 @@
         <input type="text" id="boilerroom" name="boilerroom" class="form-control">
       </div>
     </div>
-    <div class="col-md-6"></div>
   </div>
 
   <div class='form-actions' style='clear: both'>
